--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,32 @@
 ---
 title: "My First Website"
+execute: 
+  echo: false
 ---
 
 This is a Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+
+```{r}
+#| label: setup
+#| message: false
+
+library(tidyverse)
+```
+
+```{r}
+#| label: diamonds-plot
+
+diamonds |> 
+  filter(z != 0) |> 
+  filter(color == "D") |> 
+  ggplot(aes(x = carat, y = price, color = cut)) + 
+    geom_point() +
+    scale_y_continuous(labels = scales::dollar) +
+    labs(title = "Prices and Sizes for Diamonds of Color D",
+         subtitle = "'Round' carat values like 1, 1.5 and 2 are more common.",
+         x = "Carat",
+         y = "Price")
+```
+
